# CoACD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  project.toml  run_example.sh  run_tests.py  setup.py
.github/workflows/: build.yml  build_ue_plugin_library.yml  debug-ci.yml  wheel.yml
Assets/Samples/: Platform Material.mat  SampleDriver.cs
Assets/Samples/Scissors/: Scissors.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scenes/SampleScene_Profiles/: Scene Setup Profile.asset
ProjectSettings/: DynamicsManager.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset
UserSettings/Layouts/: default-2021.dwlt
cmake/: Config.cmake.in  boost.cmake  eigen.cmake  openvdb.cmake  openvdb_CMakeLists.txt  openvdb_cmd_CMakeLists.txt  spdlog.cmake  zlib.cmake
docker/: Dockerfile
examples/results/: Bottle_out.wrl  Container.wrl  Kettle_out.wrl  KitchenPot_out.wrl  Octocat-v2_out.wrl  RobotLink.wrl  SnowFlake_out.wrl
public/: coacd.cpp  coacd.h
python/: py_example.py
python/coacd/: coacd.cpp  coacd.hpp
python/package/: __init__.py
src/: bvh.cpp  bvh.h  clip.cpp  clip.h  config.h  cost.cpp  cost.h  hausdorff.h  intersection.h  io.cpp  io.h  logger.cpp  logger.h  main.cpp  mcts.cpp  mcts.h  model_obj.cpp  model_obj.h  nanoflann.hpp  preprocess.cpp  preprocess.h  process.cpp  process.h  shape.cpp  shape.h  sobol.cpp  sobol.h  triangle.h  welzl.cpp  welzl.h
src/btConvexHull/: btAlignedAllocator.cpp  btAlignedAllocator.h  btAlignedObjectArray.h  btConvexHullComputer.cpp  btConvexHullComputer.h  btMinMax.h  btScalar.h  btVector3.h
src/manifold/: BVH.cpp  BVH.h  GridIndex_p.h  IO_p.cc  IO_p.h  Intersection.cpp  Intersection.h  Manifold.cpp  Manifold.h  ManifoldPlus.cpp  ManifoldPlus.h  Manifold_p.cc  Manifold_p.h  Octree.h  Octree_p.cc  Octree_p.h  model.cpp  model.h  types_p.h
src/quickhull/: ConvexHull.hpp  HalfEdgeMesh.hpp  MathUtils.hpp  QuickHull.cpp  QuickHull.hpp
src/quickhull/Structs/: Mesh.hpp  Plane.hpp  Pool.hpp  Ray.hpp  Vector3.hpp  VertexDataSource.hpp
